# screen-recorder

./: .gitignore  CMakeLists.txt  README.md
src/: AudioRecorder.cpp  AudioRecorder.h  Orchestrator.cpp  Orchestrator.h  ScreenRecorder.cpp  ScreenRecorder.h  SettingsConf.cpp  SettingsConf.h  VideoRecorder.cpp  VideoRecorder.h  main.cpp
src/wrappers/: CodecContext.cpp  CodecContext.h  Coordinates.h  Dictionary.cpp  Dictionary.h  FormatContext.cpp  FormatContext.h  Frame.cpp  Frame.h  Packet.cpp  Packet.h  com.h  wrappers.cpp  wrappers.h
